# sqeazy

./: .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  CTestLists.txt  README.md  build.gradle  buildnative.sh  installdep.osx.sh  let_me_build_that_for_you.bat  let_me_build_that_for_you.sh  let_me_bundle_that_for_you.bat  run_cmake_build.bat  run_cmake_bundle.bat  sqeasy.h  sqeazy-config-version.cmake.in  sqeazy-config.cmake.in  sqeazy.h
bench/: CMakeLists.txt  bench.cpp  bench_common.hpp  bench_fixtures.hpp  bench_utils.hpp  histo.cpp  pipeline_select.hpp  sqy.cpp  tiff_utils.h  tiff_utils.hpp
java/: CMakeLists.txt  asdk.config.win.jnaerator  build.gradle  build.sh  jnaerate.bat  jnaerate.bat.in  jnaerate.sh  jnaerate.sh.in  sqeazy.config.arch.jnaerator.in  sqeazy.config.linux.jnaerator
src/: CMakeLists.txt  background_scheme_utils.hpp  bitplane_reorder_detail.hpp  bitswap_scheme_utils.hpp  diff_scheme_utils.hpp  external_encoders.hpp  hist_impl.hpp  huffman_utils.hpp  pipeline.hpp  sqeazy.cpp  sqeazy_common.hpp  sqeazy_header.hpp  sqeazy_impl.hpp  sqeazy_traits.hpp
src/cpp/: .gitignore  CMakeLists.txt  CTestLists.txt  README.md  sqeazy-config.cmake.in
src/cpp/bench/: CMakeLists.txt  app_algs.hpp  bench.cpp  bench_common.hpp  bench_fixtures.hpp  bench_utils.hpp  benchmark_base64_encoding.cpp  benchmark_bitswap_scheme_impl.cpp  benchmark_chunked_statistics.cpp  benchmark_diff_scheme_impl.cpp  benchmark_fixtures.hpp  benchmark_flatten_to_neighborhood_scheme_impl.cpp  benchmark_frame_shuffle_scheme_impl.cpp  benchmark_full_pipeline_impl.cpp  benchmark_h264_scheme_impl.cpp  benchmark_hevc_scheme_impl.cpp  benchmark_histogram_heap_vs_stack.cpp  benchmark_histogram_utils.cpp  benchmark_lz4_scheme_impl.cpp  benchmark_pipeline_construction.cpp  benchmark_quantiser_scheme_impl.cpp  benchmark_raster_reorder_scheme_impl.cpp  benchmark_remove_background_scheme_impl.cpp  benchmark_remove_estimated_background_scheme_impl.cpp  benchmark_tile_shuffle_scheme_impl.cpp  benchmark_zcurve_reorder_scheme_impl.cpp  bulk_roundtrip.sh  dump_benchmark_datasets.cpp  hevc_roundtrip.py  histo.cpp  pipeline_select.hpp  sqy.cpp  test_benchmark_fixture_impl.cpp  tiff_utils.hpp  video_benchmark_fixtures.hpp
src/cpp/cmake/: FindFFMPEG.cmake  FindGoogleBenchmark.cmake  FindLZ4.cmake  FindOpenMP++.cmake  bundle_target.cmake  git_utils.cmake
src/cpp/inc/: H5PLextern.h  sqeazy.h  sqeazy_definitions.h.in  sqeazy_definitions.hpp  sqeazy_h5_filter.hpp
src/cpp/share/snakemake/: README.md  Snakefile  y4m.Snakefile
src/cpp/src/: CMakeLists.txt  app_algs.hpp  background_scheme_utils.hpp  base64.hpp  bitplane_reorder_detail.hpp  bitswap_scheme_utils.hpp  compass.hpp  compass_detail.hpp  compass_llvm_impl.hpp  compass_msvc_impl.hpp  compass_tags.hpp  diff_scheme_utils.hpp  dynamic_pipeline.hpp  dynamic_stage.hpp  dynamic_stage_chain.hpp  dynamic_stage_factory.hpp  external_encoders.hpp  hdf5_utils.hpp  header_tag.hpp  header_utils.hpp  hevc_scheme_utils.hpp  hist_impl.hpp  image_stack.hpp  neighborhood_utils.hpp  pass_through_scheme_impl.hpp  pass_through_scheme_utils.hpp  pipeline.hpp  pipeline_select.hpp  quantiser_impl.hpp  regex_helpers.hpp  sqeazy.cpp  sqeazy_algorithms.hpp  sqeazy_common.hpp  sqeazy_hdf.cpp  sqeazy_hdf5_impl.hpp  sqeazy_header.hpp  sqeazy_impl.hpp  sqeazy_pipelines.hpp  sqeazy_predef_pipelines.hpp  sqeazy_traits.hpp  (+9 more)
src/cpp/src/app/: verb_compress.hpp  verb_decompress.hpp  verb_scan.hpp
src/cpp/src/deprecated/: static_pipeline_select.hpp  static_predef_pipelines.hpp
src/cpp/src/detail/: compass_detail.hpp  compass_gnu_impl.hpp  compass_tags.hpp
src/cpp/src/encoders/: background_scheme_utils.hpp  bitplane_reorder_scalar.hpp  bitplane_reorder_sse.hpp  bitshuffle_scheme_impl.hpp  bitswap_scheme_impl.hpp  bitswap_scheme_utils.hpp  diff_scheme_impl.hpp  external_encoders.hpp  ffmpeg_video_encode_impl.hpp  flatten_to_neighborhood_scheme_impl.hpp  frame_shuffle_scheme_impl.hpp  frame_shuffle_utils.hpp  h264.hpp  h264_scheme_impl.hpp  hevc.hpp  hevc_scheme_impl.hpp  histogram_utils.hpp  huffman_utils.hpp  lz4.hpp  lz4_utils.hpp  memory_reorder_scheme_impl.hpp  memory_reorder_utils.hpp  morton.hpp  quantiser_impl.hpp  quantiser_scheme_impl.hpp  quantiser_utils.hpp  quantiser_weighters.hpp  raster_reorder_scheme_impl.hpp  raster_reorder_utils.hpp  remove_background_scheme_impl.hpp  remove_estimated_background_scheme_impl.hpp  scalar_utils.hpp  sqeazy_impl.hpp  (+8 more)
src/cpp/tests/: CMakeLists.txt  array_fixtures.hpp  bench_bitplane_reorder_impl.cpp  bfs_helpers.hpp  compass_fixture.hpp  deprecated_pipeline_impl.cpp  deprecated_pipeline_select_impl.cpp  hdf5_create_sample.h5  hdf5_fixtures.hpp  hdf5_test_utils.hpp  hdf5_utils.hpp  mini_example.y4m  mini_example_w92_h128.yuv  quantiser_fixtures.hpp  run_stack_overflow.cpp  sse_test_utils.hpp  test_algorithms.hpp  test_algorithms_impl.cpp  test_apply.cpp  test_avcodec_sandbox.cpp  test_background_scheme_impl.cpp  test_background_schemes.cpp  test_base64_impl.cpp  test_bench_utils_impl.cpp  test_bitplane_reorder_impl.cpp  test_bitplane_reorder_on_ramp_impl.cpp  test_bitshuffle_scheme_impl.cpp  test_bitswap_scheme_impl.cpp  test_bitswap_schemes.cpp  test_compass_impl.cpp  test_diff_scheme_impl.cpp  test_diff_schemes.cpp  test_dynamic_pipeline_impl.cpp  test_dynamic_pipeline_impl.hpp  test_dynamic_stage_factory_impl.cpp  test_dynamic_stage_impl.cpp  test_frame_shuffle_scheme_impl.cpp  test_h264_scheme_impl.cpp  test_hdf5_impl.cpp  test_hdf5_interface.cpp  (+34 more)
src/java/: sqeazy.config.arch.jnaerator.in
tests/: CMakeLists.txt  array_fixtures.hpp  sse_test_utils.hpp  test_apply.cpp  test_background_scheme_impl.cpp  test_background_schemes.cpp  test_bench_utils_impl.cpp  test_bitplane_reorder_impl.cpp  test_bitswap_scheme_impl.cpp  test_bitswap_schemes.cpp  test_diff_scheme_impl.cpp  test_diff_schemes.cpp  test_hist_impl.cpp  test_huffman_utils_impl.cpp  test_lz4_encoding.cpp  test_lz4_encoding_impl.cpp  test_pipeline_select.cpp  test_rotate_by_intrinsics.cpp  test_shift_by_intrinsics.cpp  test_sqeazy_header_impl.cpp  test_tiff_fixture.cpp
(+56 files in other folders)
