INCLUDE_DIRECTORIES(.)

FIND_PACKAGE (Boost 1.42 QUIET COMPONENTS system filesystem unit_test_framework REQUIRED)
IF(Boost_FOUND)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS}) 
ENDIF()

#FIXME: OS dependent
IF(DEFINED ${BOOST_ROOT} AND ${BOOST_ROOT} MATCHES ".*/.*")
  SET(BOOST_LIB_DIR ${BOOST_ROOT}/lib)
ELSE()
  SET(BOOST_LIB_DIR ${Boost_LIBRARY_DIRS})
ENDIF()

#FIXME: OS dependent
add_library( ext_boost_system  SHARED IMPORTED )
set_target_properties( ext_boost_system PROPERTIES IMPORTED_LOCATION ${BOOST_LIB_DIR}/libboost_system.so )

add_library( ext_boost_filesystem  SHARED IMPORTED )
set_target_properties( ext_boost_filesystem PROPERTIES IMPORTED_LOCATION ${BOOST_LIB_DIR}/libboost_filesystem.so )

add_library( ext_boost_program_options  SHARED IMPORTED )
set_target_properties( ext_boost_program_options PROPERTIES IMPORTED_LOCATION ${BOOST_LIB_DIR}/libboost_program_options.so )


FIND_PACKAGE(TIFF REQUIRED)
IF(TIFF_FOUND)
add_executable(bench bench.cpp)
target_link_libraries(bench tiff lz4 ext_boost_filesystem ext_boost_system)
IF(UNIX)
SET(BENCH_COMPILE_FLAGS "-I${PROJECT_SOURCE_DIR}/src")
ELSE(UNIX)
  IF(${CMAKE_C_COMPILER_ID} MATCHES "MSVC" OR ${CMAKE_CXX_COMPILER_ID} MATCHES "MSVC")
    SET(BENCH_COMPILE_FLAGS "/I${PROJECT_SOURCE_DIR}/src")
  ENDIF()
ENDIF(UNIX)



IF(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
IF(HAS_CPP11_COMPILERFLAG)
SET(BENCH_COMPILE_FLAGS "${BENCH_COMPILE_FLAGS} -std=c++11")
ENDIF()
ENDIF()

if(SQY_VERBOSE)
list(APPEND BENCH_COMPILE_FLAGS " -D_SQY_VERBOSE_=1")
endif(SQY_VERBOSE)

STRING(REPLACE ";" " " BENCH_COMPILE_FLAGS ${BENCH_COMPILE_FLAGS})
MESSAGE(STATUS ">> adding compile flag to bench: ${BENCH_COMPILE_FLAGS}")
set_target_properties(bench PROPERTIES COMPILE_FLAGS "${BENCH_COMPILE_FLAGS}")

add_executable(sqy sqy.cpp)

target_link_libraries(sqy tiff lz4 ext_boost_filesystem ext_boost_system ext_boost_program_options)

IF(UNIX)
SET(SQY_COMPILE_FLAGS "-I${PROJECT_SOURCE_DIR}/src")
ELSE(UNIX)
  IF(${CMAKE_C_COMPILER_ID} MATCHES "MSVC" OR ${CMAKE_CXX_COMPILER_ID} MATCHES "MSVC")
    SET(SQY_COMPILE_FLAGS "/I${PROJECT_SOURCE_DIR}/src")
  ENDIF()
ENDIF(UNIX)

IF(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
IF(HAS_CPP11_COMPILERFLAG)
SET(SQY_COMPILE_FLAGS "${SQY_COMPILE_FLAGS} -std=c++11")
ENDIF()
ENDIF()

if(SQY_VERBOSE)
IF(UNIX)
list(APPEND SQY_COMPILE_FLAGS " -D_SQY_VERBOSE_=1")
ELSE(UNIX)
IF(${CMAKE_C_COMPILER_ID} MATCHES "MSVC" OR ${CMAKE_CXX_COMPILER_ID} MATCHES "MSVC")
list(APPEND SQY_COMPILE_FLAGS " /D_SQY_VERBOSE_=1")
ENDIF()
ENDIF(UNIX)
endif(SQY_VERBOSE)

STRING(REPLACE ";" " " SQY_COMPILE_FLAGS ${SQY_COMPILE_FLAGS})
MESSAGE(STATUS ">> adding compile flag to sqy: ${SQY_COMPILE_FLAGS}")
set_target_properties(sqy PROPERTIES COMPILE_FLAGS "${SQY_COMPILE_FLAGS}")



FIND_PACKAGE(ROOT QUIET)
IF(ROOT_FOUND)
add_executable(histo histo.cpp)
target_link_libraries(histo tiff ${ROOT_LIBRARIES} ext_boost_system ext_boost_filesystem)

execute_process(
    COMMAND ${ROOT_CONFIG_EXECUTABLE} --cflags
    OUTPUT_VARIABLE ROOT_INCLUDE_FLAGS
    OUTPUT_STRIP_TRAILING_WHITESPACE)

IF(UNIX)
	SET(HISTO_COMPILE_FLAGS "${ROOT_INCLUDE_FLAGS} -I${PROJECT_SOURCE_DIR}/src")
	ELSE(UNIX)
	SET(HISTO_COMPILE_FLAGS "${ROOT_INCLUDE_FLAGS} /I${PROJECT_SOURCE_DIR}/src")
	ENDIF(UNIX)
	
IF(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
IF(HAS_CPP11_COMPILERFLAG)
SET(HISTO_COMPILE_FLAGS "${HISTO_COMPILE_FLAGS} -std=c++11")
ENDIF()
ENDIF()

if(SQY_VERBOSE)
IF(${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC" OR ${CMAKE_C_COMPILER_ID} STREQUAL "MSVC")
list(APPEND HISTO_COMPILE_FLAGS " /D_SQY_VERBOSE_=1")
ELSE()
list(APPEND HISTO_COMPILE_FLAGS " -D_SQY_VERBOSE_=1")
ENDIF()
endif(SQY_VERBOSE)

STRING(REPLACE ";" " " HISTO_COMPILE_FLAGS ${HISTO_COMPILE_FLAGS})
set_target_properties(histo PROPERTIES COMPILE_FLAGS "${HISTO_COMPILE_FLAGS}")
MESSAGE(STATUS ">> adding compile flag to histo: ${HISTO_COMPILE_FLAGS}")
ELSE(ROOT_FOUND)
MESSAGE(STATUS ">> Skipping optional bench/histo utility, ROOT libraries not found!")
ENDIF(ROOT_FOUND)


ELSE(TIFF_FOUND)
WARNING("Skipping benchmark utils, libtiff not found (but required for build)\!")
ENDIF(TIFF_FOUND)


