INCLUDE_DIRECTORIES(.)
IF(WIN32)
SET(Boost_USE_STATIC_LIBS ON)
add_library(ext_lz4 STATIC IMPORTED)
set_target_properties(ext_lz4 PROPERTIES IMPORTED_LOCATION "${LZ4_STATIC_LIB}") 
ELSE(WIN32)
add_library(ext_lz4 SHARED IMPORTED)
set_target_properties(ext_lz4 PROPERTIES IMPORTED_LOCATION "${LZ4_SHARED_LIB}") 
ENDIF(WIN32)





FIND_PACKAGE (Boost 1.42 QUIET COMPONENTS system filesystem program_options REQUIRED)
IF(Boost_FOUND)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS}) 
ENDIF()


FIND_PACKAGE(TIFF REQUIRED)

IF(TIFF_FOUND)
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
IF(WIN32)
add_library(ext_tiff STATIC IMPORTED)
set_target_properties(ext_tiff PROPERTIES IMPORTED_LOCATION "${TIFF_LIBRARIES}") 
ELSE(WIN32)
add_library(ext_tiff SHARED IMPORTED)
set_target_properties(ext_tiff PROPERTIES IMPORTED_LOCATION "${TIFF_LIBRARIES}") 
ENDIF(WIN32)


add_executable(bench bench.cpp)
target_link_libraries(bench ext_tiff ext_lz4 ${Boost_LIBRARIES})
IF(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
SET(ADDITIONAL_COMPILE_FLAGS "-I${PROJECT_SOURCE_DIR}/src")
ELSE()
  IF(${CMAKE_CXX_COMPILER_ID} MATCHES "MSVC")
    SET(ADDITIONAL_COMPILE_FLAGS "/I${PROJECT_SOURCE_DIR}/src")
  ENDIF()
ENDIF()



IF(NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL "MSVC")
IF(HAS_CPP11_COMPILERFLAG)
SET(ADDITIONAL_COMPILE_FLAGS "${ADDITIONAL_COMPILE_FLAGS} -std=c++11")
ENDIF()
ENDIF()

if(SQY_VERBOSE)
list(APPEND ADDITIONAL_COMPILE_FLAGS " -D_SQY_VERBOSE_=1")
endif(SQY_VERBOSE)

STRING(REPLACE ";" " " ADDITIONAL_COMPILE_FLAGS ${ADDITIONAL_COMPILE_FLAGS})
MESSAGE(STATUS ">> adding compile flag to bench: ${ADDITIONAL_COMPILE_FLAGS}")
set_target_properties(bench PROPERTIES COMPILE_FLAGS "${ADDITIONAL_COMPILE_FLAGS}")

add_executable(sqy sqy.cpp)
target_link_libraries(sqy ext_tiff ext_lz4 ${Boost_LIBRARIES})
MESSAGE(STATUS ">> adding compile flag to sqy: ${ADDITIONAL_COMPILE_FLAGS}")
set_target_properties(sqy PROPERTIES COMPILE_FLAGS "${ADDITIONAL_COMPILE_FLAGS}")



FIND_PACKAGE(ROOT QUIET)
IF(ROOT_FOUND)
add_executable(histo histo.cpp)
target_link_libraries(histo ext_tiff ${ROOT_LIBRARIES} ${Boost_LIBRARIES})

execute_process(
    COMMAND ${ROOT_CONFIG_EXECUTABLE} --cflags
    OUTPUT_VARIABLE ROOT_INCLUDE_FLAGS
    OUTPUT_STRIP_TRAILING_WHITESPACE)
  
SET(HISTO_COMPILE_FLAGS "${ROOT_INCLUDE_FLAGS} ${ADDITIONAL_COMPILE_FLAGS}")
MESSAGE(STATUS ">> adding compile flag to histo: ${HISTO_COMPILE_FLAGS}")
set_target_properties(histo PROPERTIES COMPILE_FLAGS "${HISTO_COMPILE_FLAGS}")

ELSE(ROOT_FOUND)
MESSAGE(STATUS ">> Skipping optional bench/histo utility, ROOT libraries not found!")
ENDIF(ROOT_FOUND)


ELSE(TIFF_FOUND)
WARNING("Skipping benchmark utils, libtiff not found (but required for build)\!")
ENDIF(TIFF_FOUND)


