INCLUDE_DIRECTORIES(.)

#DYNAMIC LIBRARY
add_library(${PROJECT_NAME} SHARED sqeazy.cpp)
target_link_libraries(${PROJECT_NAME} lz4)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${PROJECT_SOURCE_DIR}/inc/sqeazy.h") 

#STATIC LIBRARY
add_library(${PROJECT_NAME}_static STATIC sqeazy.cpp)
target_link_libraries(${PROJECT_NAME}_static lz4.a)
#SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES PUBLIC_HEADER "${PROJECT_SOURCE_DIR}/inc/sqeazy.h") 

IF(UNIX)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
ENDIF(UNIX)

INSTALL(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_static
  EXPORT sqeazy-targets 
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" 
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT inc)



# INSTALL(TARGETS ${PROJECT_NAME}_static
#   EXPORT sqeazy-targets 
#   LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
#   PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT inc)