INCLUDE_DIRECTORIES(.)


#DYNAMIC LIBRARY
add_library(${PROJECT_NAME} SHARED sqeazy.cpp)
target_link_libraries(${PROJECT_NAME} lz4)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${PROJECT_SOURCE_DIR}/inc/sqeazy.h") 
SET(SQY_SRC_TARGETS ${PROJECT_NAME})


#STATIC LIBRARY
if(EXISTS ${LZ4_STATIC_LIB})
add_library(${PROJECT_NAME}_static STATIC sqeazy.cpp)
add_library(lz4_static STATIC IMPORTED)
set_target_properties(lz4_static PROPERTIES IMPORTED_LOCATION "${LZ4_STATIC_LIB}") 
target_link_libraries(${PROJECT_NAME}_static lz4_static) 
IF(UNIX)
SET_TARGET_PROPERTIES(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME ${PROJECT_NAME})
ENDIF(UNIX)
SET(SQY_SRC_TARGETS ${SQY_SRC_TARGETS} ${PROJECT_NAME})
else()
message(WARNING "static lz4 library not found, static libsqeazy cannot be built")
endif()



#INSTALL(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}_static
INSTALL(TARGETS ${SQY_SRC_TARGETS}
  EXPORT sqeazy-targets 
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" 
  ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT inc)



# INSTALL(TARGETS ${PROJECT_NAME}_static
#   EXPORT sqeazy-targets 
#   LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
#   PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT inc)